# greentic-qa

./: .editorconfig  .gitignore  Cargo.toml  README.md  SECURITY.md  component.manifest.json
.codex/: QA-PR-03.md  QA-PR-04.md  QA-PR-05.md  QA-PR-06.md  QA-PR-07.md  QA-PR-09.md  QA-PR-11.md  QA-PR-12.md  QA-PR-15.md  QA-PR-16.md  global_rules.md  repo_overview.md
.codex/done/: PR-0.6.0-qa.md  QA-PR-01.md  QA-PR-02.md  QA-PR-08.md  QA-PR-10.md  QA-PR-13.md  QA-PR-14.md  README_FIRST.md
.github/workflows/: ci.yml  component-qa.yml  nightly-e2e.yml  publish.yml
ci/: local_check.sh
ci/fixtures/: sample_form_generation.json
ci/scripts/: binstall_verify.sh  smoke.sh
crates/component-qa/: Cargo.toml  Makefile  README.md  component.manifest.json
crates/component-qa/schemas/: component.schema.json
crates/component-qa/schemas/io/: input.schema.json  output.schema.json
crates/component-qa/src/: bindings.rs  lib.rs  qa.rs
crates/component-qa/tests/: conformance.rs
crates/qa-cli/: Cargo.toml
crates/qa-cli/src/: builder.rs  main.rs  wizard.rs
crates/qa-spec/: Cargo.toml
crates/qa-spec/src/: answers.rs  answers_schema.rs  convert.rs  examples.rs  expr.rs  lib.rs  render.rs  validate.rs  visibility.rs
crates/qa-spec/src/spec/: form.rs  mod.rs  question.rs
crates/qa-spec/tests/: progress.rs  render.rs  roundtrip.rs  template.rs  validation.rs
docs/: audit-frontends.md  demo-bundle.md  frontends.md  i18n.md
packs/qa-wizard-pack/: README.md  pack.yaml
packs/qa-wizard-pack/flows/: qa_wizard.flow.yaml
