[workspace]
resolver = "2"
members = [
    "crates/qa-spec",
    "crates/component-qa",
    "crates/qa-cli",
]

[workspace.package]
name = "greentic-qa"
version = "0.4.1"
edition = "2024"
license = "MIT"
rust-version = "1.90"
repository = "https://github.com/greentic-ai/greentic-qa"
homepage = "https://github.com/greentic-ai/greentic-qa"
description = "Greentic QA tooling (component-qa, greentic-qa, qa-spec) for adaptive wizard flows."

[workspace.dependencies]
qa-spec = { path = "crates/qa-spec", version = "0.4.0" }
component-qa = { path = "crates/component-qa", version = "0.4.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
handlebars = "6"
thiserror = "2"
regex = "1"
globset = "0.4"
clap = { version = "4", features = ["derive"] }
tempfile = "3"
[workspace.dev-dependencies]
tempfile = "3"
